batch fix duplicate headings

--- a/pw50_between_motos_checklist.html
+++ b/pw50_between_motos_checklist.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>PW50 Between Motos Checklist — MasterTune Moto Suite</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>PW50 Between Motos Checklist — MasterTune Moto Suite</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<style>
 header h1 a { text-decoration: none; color: inherit; }
     body {
       margin: 0;
@@ -98,85 +99,75 @@ header h1 a { text-decoration: none; color: inherit; }
   </style>
 </head>
 <body>
-  <header>
-    <div class="left" style="display: flex; align-items: center;">
-      <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
-    </div>
-    <select class="bike-selector">
-      <option selected>PW50</option>
-      <option disabled>Cobra (coming soon)</option>
-      <option disabled>CRF50 (coming soon)</option>
-    </select>
-  </header>
-
-  <div class="tool-container">
-  <h2 class="tool-name">PW50 Between Motos Checklist</h2>
-    <h2>PW50 Between Motos Checklist</h2>
-    <p>This is your 20-minute refresh routine to keep the PW50 race-ready between motos or after heavy backyard thrashing. Don’t overthink it — just run down the list and trust the process.</p>
-
-    <details class="section">
-      <summary>Fast Wash Routine</summary>
-      <div class="checklist">
-        <label><input type="checkbox"/> Remove seat and rear fender</label>
-        <label><input type="checkbox"/> Avoid spraying kill switch directly</label>
-        <label><input type="checkbox"/> Use electric pressure washer only</label>
-        <label><input type="checkbox"/> Focus on cleaning head &amp; cylinder fins</label>
-        <label><input type="checkbox"/> Lay bike over to reach bottom if needed</label>
-        <label><input type="checkbox"/> Dry before touching air filter or carb</label>
-      </div>
-    </details>
-
-    <details class="section">
-      <summary>Air Filter Cleaning</summary>
-      <div class="checklist">
-        <label><input type="checkbox"/> Remove airbox and foam</label>
-        <label><input type="checkbox"/> Clean using your preferred method</label>
-        <label><input type="checkbox"/> Re-oil and reassemble properly</label>
-        <label><input type="checkbox"/> Confirm fit and seal before reinstalling</label>
-      </div>
-    </details>
-
-    <details class="section">
-      <summary>Trackside Carb Clean</summary>
-      <div class="checklist">
-        <label><input type="checkbox"/> Clamp fuel line and remove carb</label>
-        <label><input type="checkbox"/> Dump fuel and clean jets</label>
-        <label><input type="checkbox"/> Blow out all circuits and passages</label>
-        <label><input type="checkbox"/> Align slide cutout correctly when reinstalling</label>
-      </div>
-    </details>
-
-    <details class="section">
-      <summary>Ring Gear &amp; Axle Check</summary>
-      <div class="checklist">
-        <label><input type="checkbox"/> Remove silencer and diff cover</label>
-        <label><input type="checkbox"/> Remove axle and inspect splines</label>
-        <label><input type="checkbox"/> Reassemble carefully</label>
-        <label><input type="checkbox"/> Torque axle nut to 50 ft-lbs</label>
-      </div>
-    </details>
-
-    <details class="section">
-      <summary>Final Checks Before Next Ride</summary>
-      <div class="checklist">
-        <label><input type="checkbox"/> Air filter clean and seated</label>
-        <label><input type="checkbox"/> Carb mounted tight</label>
-        <label><input type="checkbox"/> Spark plug fresh and gapped</label>
-        <label><input type="checkbox"/> Connectors dry, no water in seat foam</label>
-        <label><input type="checkbox"/> Fuel turned ON</label>
-      </div>
-    </details>
-
-    <div class="button-row">
-      <button onclick="copyLog()">Copy Maintenance Log</button>
-      <button onclick="window.print()">Print Maintenance Log</button>
-    </div>
-  </div>
-
-  
-
-  <script>
+<header>
+<div class="left" style="display: flex; align-items: center;">
+<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<h1><a href="index.html">MasterTune Moto Suite</a></h1>
+</div>
+<select class="bike-selector">
+<option selected="">PW50</option>
+<option disabled="">Cobra (coming soon)</option>
+<option disabled="">CRF50 (coming soon)</option>
+</select>
+</header>
+<div class="tool-container">
+<h2 class="tool-name">PW50 Between Motos Checklist</h2>
+<h2>PW50 Between Motos Checklist</h2>
+<p>This is your 20-minute refresh routine to keep the PW50 race-ready between motos or after heavy backyard thrashing. Don’t overthink it — just run down the list and trust the process.</p>
+<details class="section">
+<summary>Fast Wash Routine</summary>
+<div class="checklist">
+<label><input type="checkbox"/> Remove seat and rear fender</label>
+<label><input type="checkbox"/> Avoid spraying kill switch directly</label>
+<label><input type="checkbox"/> Use electric pressure washer only</label>
+<label><input type="checkbox"/> Focus on cleaning head &amp; cylinder fins</label>
+<label><input type="checkbox"/> Lay bike over to reach bottom if needed</label>
+<label><input type="checkbox"/> Dry before touching air filter or carb</label>
+</div>
+</details>
+<details class="section">
+<summary>Air Filter Cleaning</summary>
+<div class="checklist">
+<label><input type="checkbox"/> Remove airbox and foam</label>
+<label><input type="checkbox"/> Clean using your preferred method</label>
+<label><input type="checkbox"/> Re-oil and reassemble properly</label>
+<label><input type="checkbox"/> Confirm fit and seal before reinstalling</label>
+</div>
+</details>
+<details class="section">
+<summary>Trackside Carb Clean</summary>
+<div class="checklist">
+<label><input type="checkbox"/> Clamp fuel line and remove carb</label>
+<label><input type="checkbox"/> Dump fuel and clean jets</label>
+<label><input type="checkbox"/> Blow out all circuits and passages</label>
+<label><input type="checkbox"/> Align slide cutout correctly when reinstalling</label>
+</div>
+</details>
+<details class="section">
+<summary>Ring Gear &amp; Axle Check</summary>
+<div class="checklist">
+<label><input type="checkbox"/> Remove silencer and diff cover</label>
+<label><input type="checkbox"/> Remove axle and inspect splines</label>
+<label><input type="checkbox"/> Reassemble carefully</label>
+<label><input type="checkbox"/> Torque axle nut to 50 ft-lbs</label>
+</div>
+</details>
+<details class="section">
+<summary>Final Checks Before Next Ride</summary>
+<div class="checklist">
+<label><input type="checkbox"/> Air filter clean and seated</label>
+<label><input type="checkbox"/> Carb mounted tight</label>
+<label><input type="checkbox"/> Spark plug fresh and gapped</label>
+<label><input type="checkbox"/> Connectors dry, no water in seat foam</label>
+<label><input type="checkbox"/> Fuel turned ON</label>
+</div>
+</details>
+<div class="button-row">
+<button onclick="copyLog()">Copy Maintenance Log</button>
+<button onclick="window.print()">Print Maintenance Log</button>
+</div>
+</div>
+<script>
     function copyLog() {
       const checks = document.querySelectorAll('input[type="checkbox"]');
       let text = 'PW50 Between Motos Checklist:\n\n';
@@ -189,7 +180,6 @@ header h1 a { text-decoration: none; color: inherit; }
       alert('Checklist copied to clipboard!');
     }
   </script>
-
 <div id="footer-container"></div>
 <script>
   fetch('footer.html')
