--- a/piston_clearance_and_ring_gap_calculator.html
+++ b/piston_clearance_and_ring_gap_calculator.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>Piston Clearance & Ring Gap Calculator — MasterTune Moto Suite</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Piston Clearance &amp; Ring Gap Calculator — MasterTune Moto Suite</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<style>
 header h1 a { text-decoration: none; color: inherit; }
     body {
       margin: 0;
@@ -95,55 +96,51 @@ header h1 a { text-decoration: none; color: inherit; }
   </style>
 </head>
 <body>
-  <header>
-    <div class="left">
-      <img src="images/mastertune-logo.png" alt="MasterTune Logo" />
-      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
-    </div>
-    <select class="bike-selector">
-      <option selected>PW50</option>
-      <option disabled>Cobra (coming soon)</option>
-      <option disabled>CRF50 (coming soon)</option>
-      <option disabled>KTM Mini (coming soon)</option>
-    </select>
-  </header>
+<header>
+<div class="left">
+<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<h1><a href="index.html">MasterTune Moto Suite</a></h1>
+</div>
+<select class="bike-selector">
+<option selected="">PW50</option>
+<option disabled="">Cobra (coming soon)</option>
+<option disabled="">CRF50 (coming soon)</option>
+<option disabled="">KTM Mini (coming soon)</option>
+</select>
+</header>
+<div class="tool-container">
+<h2 class="tool-name">Piston Clearance &amp; Ring Gap Calculator</h2>
 
-  <div class="tool-container">
-  <h2 class="tool-name">Piston Clearance & Ring Gap Calculator</h2>
-    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
-    <div class="tip">
+<div class="tip">
       Enter your piston diameter to calculate your ideal <strong>ring end gap</strong> using Gordon Jennings’ tuning rule: 0.004" per inch of piston diameter. Applies to cast rings on a steel bore.
     </div>
-    <select id="pistonSize" onchange="updateDiameterFromSelection()">
-      <option disabled selected value="">🧩 Select Piston Size</option>
-      <option value="40.00">40.00mm Stock</option>
-      <option value="40.25">40.25mm OS Level 1</option>
-      <option value="40.50">40.50mm OS Level 2</option>
-      <option value="40.08">40.080mm Wiseco</option>
-      <option value="44.00">44mm Chinese (extra clearance)</option>
-      <option value="44.00">44mm Tri-Zinger</option>
-      <option value="44.00">44mm PAX</option>
-      <option value="44.00">44mm Factory51</option>
-    </select>
-    <input id="diameter" type="hidden" value="40.00"/>
-    <select id="usecase">
-      <option disabled selected value="">🏁 Application Type</option>
-      <option value="rec">Rec / Trail</option>
-      <option value="race">Race</option>
-      <option value="sand">Sand / Dunes</option>
-      <option value="highrpm">High-RPM Mod Build</option>
-    </select>
-    <label for="actualGap">Your Measured Ring Gap (inches)</label>
-    <input id="actualGap" placeholder="e.g., 0.0065" step="0.0001" type="number"/>
-    <button onclick="calculateRing()">CALCULATE</button>
-    <div class="result" id="result" style="display: none;">
-      <br/><strong>Final Bore Diameter:</strong> <span id="boreResult">40.030 mm</span>
-    </div>
-  </div>
-
-  
-
-  <script>
+<select id="pistonSize" onchange="updateDiameterFromSelection()">
+<option disabled="" selected="" value="">🧩 Select Piston Size</option>
+<option value="40.00">40.00mm Stock</option>
+<option value="40.25">40.25mm OS Level 1</option>
+<option value="40.50">40.50mm OS Level 2</option>
+<option value="40.08">40.080mm Wiseco</option>
+<option value="44.00">44mm Chinese (extra clearance)</option>
+<option value="44.00">44mm Tri-Zinger</option>
+<option value="44.00">44mm PAX</option>
+<option value="44.00">44mm Factory51</option>
+</select>
+<input id="diameter" type="hidden" value="40.00"/>
+<select id="usecase">
+<option disabled="" selected="" value="">🏁 Application Type</option>
+<option value="rec">Rec / Trail</option>
+<option value="race">Race</option>
+<option value="sand">Sand / Dunes</option>
+<option value="highrpm">High-RPM Mod Build</option>
+</select>
+<label for="actualGap">Your Measured Ring Gap (inches)</label>
+<input id="actualGap" placeholder="e.g., 0.0065" step="0.0001" type="number"/>
+<button onclick="calculateRing()">CALCULATE</button>
+<div class="result" id="result" style="display: none;">
+<br/><strong>Final Bore Diameter:</strong> <span id="boreResult">40.030 mm</span>
+</div>
+</div>
+<script>
     function calculateRing() {
       const mm = parseFloat(document.getElementById("diameter").value);
       const use = document.getElementById("usecase").value;
@@ -189,7 +186,6 @@ header h1 a { text-decoration: none; color: inherit; }
       if (boreResult) boreResult.textContent = bore + " mm";
     }
   </script>
-
 <div id="footer-container"></div>
 <script>
   fetch('footer.html')
