--- a/pw50_bearing_selector_upgrade_guide.html
+++ b/pw50_bearing_selector_upgrade_guide.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PW50 Bearing Selector & Upgrade Guide — MasterTune Moto Suite</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>PW50 Bearing Selector &amp; Upgrade Guide — MasterTune Moto Suite</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<style>
 header h1 a { text-decoration: none; color: inherit; }
     body {
       margin: 0;
@@ -81,88 +82,83 @@ header h1 a { text-decoration: none; color: inherit; }
   </style>
 </head>
 <body>
-  <header>
-    <div class="left">
-      <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
-    </div>
-    <select class="bike-selector">
-      <option selected>PW50</option>
-      <option disabled>Cobra (coming soon)</option>
-      <option disabled>CRF50 (coming soon)</option>
-      <option disabled>KTM Mini (coming soon)</option>
-    </select>
-  </header>
+<header>
+<div class="left">
+<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<h1><a href="index.html">MasterTune Moto Suite</a></h1>
+</div>
+<select class="bike-selector">
+<option selected="">PW50</option>
+<option disabled="">Cobra (coming soon)</option>
+<option disabled="">CRF50 (coming soon)</option>
+<option disabled="">KTM Mini (coming soon)</option>
+</select>
+</header>
+<div class="tool-container">
+<h2 class="tool-name">PW50 Bearing Selector Upgrade Guide</h2>
 
-  <div class="tool-container">
-  <h2 class="tool-name">PW50 Bearing Selector Upgrade Guide</h2>
-    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
-    <p>Choose the section of the bike to view bearing information.</p>
-    <select id="sectionSelector" onchange="showSection()">
-      <option value="">-- Select Section --</option>
-      <option value="front">🛞 Front Wheel Bearings</option>
-      <option value="rear">🛞 Rear Hub Bearings</option>
-      <option value="pinion">⚙️ Pinion Shaft Bearings</option>
-      <option value="final">⚙️ Final Drive Bearings</option>
-      <option value="clutch">🛠 Clutch Shaft Bearings</option>
-      <option value="output">🛠 Output Shaft Bearings</option>
-      <option value="crank">💥 Crankshaft Bearings</option>
-      <option value="trans">🧪 Transmission Bearings</option>
-    </select>
-
-    <div class="output" id="front">
-      <ul>
-        <li><strong>Stock:</strong> (2) 6200 sealed bearings</li>
-        <li><strong>Upgrade:</strong> Rubber sealed RS or Ceramic Hybrid sealed</li>
-      </ul>
-    </div>
-    <div class="output" id="rear">
-      <ul>
-        <li><strong>Stock:</strong> (1) 6201 sealed bearing</li>
-        <li><strong>Upgrade:</strong> Koyo, SKF, or Ceramic Hybrid 6201</li>
-      </ul>
-    </div>
-    <div class="output" id="pinion">
-      <ul>
-        <li><strong>Stock:</strong> (2) 6201 bearings</li>
-        <li><strong>Upgrade:</strong> Nachi or NSK</li>
-      </ul>
-    </div>
-    <div class="output" id="final">
-      <ul>
-        <li><strong>Stock:</strong> (2) 6202 bearings</li>
-        <li><strong>Upgrade:</strong> Nachi or NSK C3 Clearance</li>
-      </ul>
-    </div>
-    <div class="output" id="clutch">
-      <ul>
-        <li><strong>Stock:</strong> (1) 6302 bearing</li>
-        <li><strong>Upgrade:</strong> Ceramic Hybrid</li>
-      </ul>
-    </div>
-    <div class="output" id="output">
-      <ul>
-        <li><strong>Stock:</strong> (1) 6203 bearing</li>
-        <li><strong>Upgrade:</strong> Ceramic Hybrid</li>
-      </ul>
-    </div>
-    <div class="output" id="crank">
-      <ul>
-        <li><strong>Stock:</strong> (2) 6203 C3</li>
-        <li><strong>Upgrade:</strong> Nachi/NSK/Koyo 6203 C3 or Ceramic Hybrid</li>
-      </ul>
-    </div>
-    <div class="output" id="trans">
-      <ul>
-        <li><strong>Stock:</strong> 6201 + 6202 + 6301</li>
-        <li><strong>Upgrade:</strong> Full Ceramic or Koyo steel with matched clearance</li>
-      </ul>
-    </div>
-  </div>
-
-  
-
-  <script>
+<p>Choose the section of the bike to view bearing information.</p>
+<select id="sectionSelector" onchange="showSection()">
+<option value="">-- Select Section --</option>
+<option value="front">🛞 Front Wheel Bearings</option>
+<option value="rear">🛞 Rear Hub Bearings</option>
+<option value="pinion">⚙️ Pinion Shaft Bearings</option>
+<option value="final">⚙️ Final Drive Bearings</option>
+<option value="clutch">🛠 Clutch Shaft Bearings</option>
+<option value="output">🛠 Output Shaft Bearings</option>
+<option value="crank">💥 Crankshaft Bearings</option>
+<option value="trans">🧪 Transmission Bearings</option>
+</select>
+<div class="output" id="front">
+<ul>
+<li><strong>Stock:</strong> (2) 6200 sealed bearings</li>
+<li><strong>Upgrade:</strong> Rubber sealed RS or Ceramic Hybrid sealed</li>
+</ul>
+</div>
+<div class="output" id="rear">
+<ul>
+<li><strong>Stock:</strong> (1) 6201 sealed bearing</li>
+<li><strong>Upgrade:</strong> Koyo, SKF, or Ceramic Hybrid 6201</li>
+</ul>
+</div>
+<div class="output" id="pinion">
+<ul>
+<li><strong>Stock:</strong> (2) 6201 bearings</li>
+<li><strong>Upgrade:</strong> Nachi or NSK</li>
+</ul>
+</div>
+<div class="output" id="final">
+<ul>
+<li><strong>Stock:</strong> (2) 6202 bearings</li>
+<li><strong>Upgrade:</strong> Nachi or NSK C3 Clearance</li>
+</ul>
+</div>
+<div class="output" id="clutch">
+<ul>
+<li><strong>Stock:</strong> (1) 6302 bearing</li>
+<li><strong>Upgrade:</strong> Ceramic Hybrid</li>
+</ul>
+</div>
+<div class="output" id="output">
+<ul>
+<li><strong>Stock:</strong> (1) 6203 bearing</li>
+<li><strong>Upgrade:</strong> Ceramic Hybrid</li>
+</ul>
+</div>
+<div class="output" id="crank">
+<ul>
+<li><strong>Stock:</strong> (2) 6203 C3</li>
+<li><strong>Upgrade:</strong> Nachi/NSK/Koyo 6203 C3 or Ceramic Hybrid</li>
+</ul>
+</div>
+<div class="output" id="trans">
+<ul>
+<li><strong>Stock:</strong> 6201 + 6202 + 6301</li>
+<li><strong>Upgrade:</strong> Full Ceramic or Koyo steel with matched clearance</li>
+</ul>
+</div>
+</div>
+<script>
     function showSection() {
       const allSections = document.querySelectorAll('.output');
       allSections.forEach(section => section.style.display = 'none');
@@ -173,7 +169,6 @@ header h1 a { text-decoration: none; color: inherit; }
       }
     }
   </script>
-
 <div id="footer-container"></div>
 <script>
   fetch('footer.html')
