--- a/pw50_compression_analyzer.html
+++ b/pw50_compression_analyzer.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PW50 Compression Analyzer — MasterTune Moto Suite</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>PW50 Compression Analyzer — MasterTune Moto Suite</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<style>
 header h1 a { text-decoration: none; color: inherit; }
     body {
       margin: 0;
@@ -91,39 +92,33 @@ header h1 a { text-decoration: none; color: inherit; }
   </style>
 </head>
 <body>
-  <header>
-    <div class="left">
-      <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
-    </div>
-    <select class="bike-selector">
-      <option selected>PW50</option>
-      <option disabled>Cobra (coming soon)</option>
-      <option disabled>CRF50 (coming soon)</option>
-      <option disabled>KTM Mini (coming soon)</option>
-    </select>
-  </header>
+<header>
+<div class="left">
+<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<h1><a href="index.html">MasterTune Moto Suite</a></h1>
+</div>
+<select class="bike-selector">
+<option selected="">PW50</option>
+<option disabled="">Cobra (coming soon)</option>
+<option disabled="">CRF50 (coming soon)</option>
+<option disabled="">KTM Mini (coming soon)</option>
+</select>
+</header>
+<div class="tool-container">
+<h2 class="tool-name">PW50 Compression Analyzer</h2>
 
-  <div class="tool-container">
-  <h2 class="tool-name">PW50 Compression Analyzer</h2>
-    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
-    <p>Enter your compression test reading (PSI) below. Be sure to hold the throttle wide open and use a quality gauge for accuracy.</p>
-
-    <label for="useType">Select Use Type</label>
-    <select id="useType">
-      <option value="race">🏁 Race Build</option>
-      <option value="backyard">🌳 Backyard Rider</option>
-    </select>
-
-    <label for="psi">Compression Reading (PSI)</label>
-    <input id="psi" placeholder="e.g. 125" step="1" type="number"/>
-    <button onclick="checkCompression()">📊 ANALYZE</button>
-    <div class="result" id="result" style="display:none;"></div>
-  </div>
-
-  
-
-  <script>
+<p>Enter your compression test reading (PSI) below. Be sure to hold the throttle wide open and use a quality gauge for accuracy.</p>
+<label for="useType">Select Use Type</label>
+<select id="useType">
+<option value="race">🏁 Race Build</option>
+<option value="backyard">🌳 Backyard Rider</option>
+</select>
+<label for="psi">Compression Reading (PSI)</label>
+<input id="psi" placeholder="e.g. 125" step="1" type="number"/>
+<button onclick="checkCompression()">📊 ANALYZE</button>
+<div class="result" id="result" style="display:none;"></div>
+</div>
+<script>
     function checkCompression() {
       const psi = parseInt(document.getElementById("psi").value);
       const useType = document.getElementById("useType").value;
@@ -150,7 +145,6 @@ header h1 a { text-decoration: none; color: inherit; }
       result.style.display = "block";
     }
   </script>
-
 <div id="footer-container"></div>
 <script>
   fetch('footer.html')
