--- a/pw50_gear_ratio_calculator.html
+++ b/pw50_gear_ratio_calculator.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PW50 Gear Ratio Calculator — MasterTune Moto Suite</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>PW50 Gear Ratio Calculator — MasterTune Moto Suite</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<style>
 header h1 a { text-decoration: none; color: inherit; }
     body {
       margin: 0;
@@ -87,54 +88,45 @@ header h1 a { text-decoration: none; color: inherit; }
   </style>
 </head>
 <body>
-  <header>
-    <div class="left">
-      <img src="images/mastertune-logo.png" alt="MasterTune Logo"/>
-      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
-    </div>
-    <select class="bike-selector">
-      <option selected>PW50</option>
-      <option disabled>Cobra (coming soon)</option>
-      <option disabled>CRF50 (coming soon)</option>
-      <option disabled>KTM Mini (coming soon)</option>
-    </select>
-  </header>
+<header>
+<div class="left">
+<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<h1><a href="index.html">MasterTune Moto Suite</a></h1>
+</div>
+<select class="bike-selector">
+<option selected="">PW50</option>
+<option disabled="">Cobra (coming soon)</option>
+<option disabled="">CRF50 (coming soon)</option>
+<option disabled="">KTM Mini (coming soon)</option>
+</select>
+</header>
+<div class="tool-container">
+<h2 class="tool-name">PW50 Gear Ratio Calculator</h2>
 
-  <div class="tool-container">
-  <h2 class="tool-name">PW50 Gear Ratio Calculator</h2>
-    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
-    <p>This tool shows engine RPM at a <strong>simulated 50 MPH</strong> to help preview whether you’re spinning the motor too fast. It’s not your actual speed — just a reference point to spot risky setups.</p>
-
-    <p><strong>🔧 PW50 Safe RPM Zones</strong></p>
-    <ul>
-      <li>Stock PW50: 7,500–8,200 RPM (⚠️ Danger: 9,000+)</li>
-      <li>Rev Plate / Light Porting: 8,500–9,500 RPM (⚠️ Danger: 10,000+)</li>
-      <li>60cc Kit: 7,000–8,000 RPM (⚠️ Danger: 8,500+)</li>
-      <li>Moped-Style Mod: 9,500–11,000+ RPM (⚠️ Danger: 12,000+)</li>
-    </ul>
-
-    <label for="primary">Primary Gear</label>
-    <select id="primary">
-      <option value="33">Stock 33T</option>
-      <option value="32">Solid State 32T</option>
-    </select>
-
-    <label for="rear">Rear Drive Gear</label>
-    <select id="rear">
-      <option value="11">PW50 11T</option>
-      <option value="10">QT50 10T</option>
-    </select>
-
-    <label for="speed">Speed (MPH)</label>
-    <input id="speed" type="number" step="1" value="50"/>
-
-    <button onclick="calculateRPM()">⚙️ Calculate RPM</button>
-    <div class="result" id="result" style="display:none;"></div>
-  </div>
-
-  
-
-  <script>
+<p>This tool shows engine RPM at a <strong>simulated 50 MPH</strong> to help preview whether you’re spinning the motor too fast. It’s not your actual speed — just a reference point to spot risky setups.</p>
+<p><strong>🔧 PW50 Safe RPM Zones</strong></p>
+<ul>
+<li>Stock PW50: 7,500–8,200 RPM (⚠️ Danger: 9,000+)</li>
+<li>Rev Plate / Light Porting: 8,500–9,500 RPM (⚠️ Danger: 10,000+)</li>
+<li>60cc Kit: 7,000–8,000 RPM (⚠️ Danger: 8,500+)</li>
+<li>Moped-Style Mod: 9,500–11,000+ RPM (⚠️ Danger: 12,000+)</li>
+</ul>
+<label for="primary">Primary Gear</label>
+<select id="primary">
+<option value="33">Stock 33T</option>
+<option value="32">Solid State 32T</option>
+</select>
+<label for="rear">Rear Drive Gear</label>
+<select id="rear">
+<option value="11">PW50 11T</option>
+<option value="10">QT50 10T</option>
+</select>
+<label for="speed">Speed (MPH)</label>
+<input id="speed" step="1" type="number" value="50"/>
+<button onclick="calculateRPM()">⚙️ Calculate RPM</button>
+<div class="result" id="result" style="display:none;"></div>
+</div>
+<script>
     function calculateRPM() {
       const primary = parseFloat(document.getElementById("primary").value);
       const rear = parseFloat(document.getElementById("rear").value);
@@ -154,7 +146,6 @@ header h1 a { text-decoration: none; color: inherit; }
       resultBox.style.display = "block";
     }
   </script>
-
 <div id="footer-container"></div>
 <script>
   fetch('footer.html')
