--- a/pw50_teardown_tracker.html
+++ b/pw50_teardown_tracker.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PW50 Teardown Tracker — MasterTune Moto Suite</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>PW50 Teardown Tracker — MasterTune Moto Suite</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<style>
 header h1 a { text-decoration: none; color: inherit; }
     body {
       margin: 0;
@@ -74,30 +75,29 @@ header h1 a { text-decoration: none; color: inherit; }
   </style>
 </head>
 <body>
-  <header>
-    <div class="left">
-      <img src="images/mastertune-logo.png" alt="MasterTune Logo" />
-      <h1><a href="index.html">MasterTune Moto Suite</a></h1>
-    </div>
-    <div>
-      <select class="bike-selector">
-        <option>PW50</option>
-        <option disabled>Cobra (coming soon)</option>
-        <option disabled>CRF50 (coming soon)</option>
-        <option disabled>KTM Mini (coming soon)</option>
-      </select>
-    </div>
-  </header>
-
-  <div class="tool-container">
-    
+<header>
+<div class="left">
+<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<h1><a href="index.html">MasterTune Moto Suite</a></h1>
+</div>
+<div>
+<select class="bike-selector">
+<option>PW50</option>
+<option disabled="">Cobra (coming soon)</option>
+<option disabled="">CRF50 (coming soon)</option>
+<option disabled="">KTM Mini (coming soon)</option>
+</select>
+</div>
+</header>
+<div class="tool-container">
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PW50 Teardown Tracker — Factory51 MasterTune</title>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>PW50 Teardown Tracker — Factory51 MasterTune</title>
+<style>
     body {
       background-color: #0B0B0B;
       color: #FAFAFA;
@@ -160,14 +160,11 @@ header h1 a { text-decoration: none; color: inherit; }
   </style>
 </head>
 <body>
-  <h1>🧰 PW50 Teardown Tracker</h1>
-  <p>Follow the full Factory51 teardown process from CH4–CH6. All progress is saved in your browser. Add notes and export your findings at the end.</p>
-
-  <div id="tracker"></div>
-
-  <button onclick="exportAll()">📋 Export My Tracker Notes</button>
-
-  <script>
+<h1>🧰 PW50 Teardown Tracker</h1>
+<p>Follow the full Factory51 teardown process from CH4–CH6. All progress is saved in your browser. Add notes and export your findings at the end.</p>
+<div id="tracker"></div>
+<button onclick="exportAll()">📋 Export My Tracker Notes</button>
+<script>
     const data = {
       '🧼 Initial Prep & Fluids': [
         'Wash and degrease the bike',
@@ -275,10 +272,8 @@ header h1 a { text-decoration: none; color: inherit; }
   </script>
 </body>
 </html>
-
-  </div>
-
-  <div id="footer-container"></div>
+</div>
+<div id="footer-container"></div>
 <script>
   fetch('footer.html')
     .then(r => r.text())
