--- a/pw50_torque_tool_fixed.html
+++ b/pw50_torque_tool_fixed.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PW50 Torque Tool — MasterTune Moto Suite</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>PW50 Torque Tool — MasterTune Moto Suite</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<style>
 header h1 a { text-decoration: none; color: inherit; }
     body {
       margin: 0;
@@ -120,87 +121,80 @@ header h1 a { text-decoration: none; color: inherit; }
 </head>
 <body>
 <header>
-  <div class="left">
-    <img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
-    <h1><a href="index.html">MasterTune Moto Suite</a></h1>
-  </div>
-  <select class="bike-selector">
-    <option>PW50</option>
-    <option disabled>Cobra (coming soon)</option>
-    <option disabled>CRF50 (coming soon)</option>
-    <option disabled>KTM Mini (coming soon)</option>
-  </select>
+<div class="left">
+<img alt="MasterTune Logo" src="images/mastertune-logo.png"/>
+<h1><a href="index.html">MasterTune Moto Suite</a></h1>
+</div>
+<select class="bike-selector">
+<option>PW50</option>
+<option disabled="">Cobra (coming soon)</option>
+<option disabled="">CRF50 (coming soon)</option>
+<option disabled="">KTM Mini (coming soon)</option>
+</select>
 </header>
-
 <div class="tool-container">
-  <h2 class="tool-name">PW50 Torque Tool</h2>
-  <p class="description">Essential torque specs for your PW50 engine rebuild. Grouped by assembly, with both Nm and ft·lb values.</p>
-  <div class="search-bar">
-    <input id="search" oninput="searchSpecs()" placeholder="Search for torque specs..." type="text"/>
-    <button onclick="searchSpecs()">SEARCH</button>
-  </div>
-  <div id="results">
-    <details open>
-      <summary>💥 Crankshaft & Internal Rotating Assembly</summary>
-      <div class="result"><span>Flywheel nut</span><span>45 Nm (33 ft·lb)</span></div>
-      <div class="result"><span>Primary gear nut</span><span>39 Nm (29 ft·lb)</span></div>
-      <div class="result"><span>Center case bolts</span><span>10 Nm (7.2 ft·lb)</span></div>
-    </details>
-    <details>
-      <summary>🏁 Clutch Shaft (Centrifugal Clutch)</summary>
-      <div class="result"><span>Clutch bolt (centrifugal shoe)</span><span>24 Nm (17 ft·lb)</span></div>
-      <div class="result"><span>Pressure plate screws</span><span>4 Nm (2.9 ft·lb)</span></div>
-    </details>
-    <details>
-      <summary>🚀 Output Shaft (Clutch Side)</summary>
-      <div class="result"><span>Clutch nut</span><span>39 Nm (29 ft·lb)</span></div>
-      <div class="result"><span>Clutch case bolts</span><span>10 Nm (7.2 ft·lb)</span></div>
-    </details>
-    <details>
-      <summary>⚙️ Rear Drive Housing (Final Drive Box)</summary>
-      <div class="result"><span>Drive housing bolts</span><span>10 Nm (7.2 ft·lb)</span></div>
-      <div class="result"><span>Output shaft nut</span><span>34 Nm (25 ft·lb)</span></div>
-    </details>
-    <details>
-      <summary>⚙️ Pinion Shaft / Bevel Gear</summary>
-      <div class="result"><span>Bevel gear cover bolts</span><span>10 Nm (7.2 ft·lb)</span></div>
-    </details>
-  </div>
-
-  <div class="tip">
+<h2 class="tool-name">PW50 Torque Tool</h2>
+<p class="description">Essential torque specs for your PW50 engine rebuild. Grouped by assembly, with both Nm and ft·lb values.</p>
+<div class="search-bar">
+<input id="search" oninput="searchSpecs()" placeholder="Search for torque specs..." type="text"/>
+<button onclick="searchSpecs()">SEARCH</button>
+</div>
+<div id="results">
+<details open="">
+<summary>💥 Crankshaft &amp; Internal Rotating Assembly</summary>
+<div class="result"><span>Flywheel nut</span><span>45 Nm (33 ft·lb)</span></div>
+<div class="result"><span>Primary gear nut</span><span>39 Nm (29 ft·lb)</span></div>
+<div class="result"><span>Center case bolts</span><span>10 Nm (7.2 ft·lb)</span></div>
+</details>
+<details>
+<summary>🏁 Clutch Shaft (Centrifugal Clutch)</summary>
+<div class="result"><span>Clutch bolt (centrifugal shoe)</span><span>24 Nm (17 ft·lb)</span></div>
+<div class="result"><span>Pressure plate screws</span><span>4 Nm (2.9 ft·lb)</span></div>
+</details>
+<details>
+<summary>🚀 Output Shaft (Clutch Side)</summary>
+<div class="result"><span>Clutch nut</span><span>39 Nm (29 ft·lb)</span></div>
+<div class="result"><span>Clutch case bolts</span><span>10 Nm (7.2 ft·lb)</span></div>
+</details>
+<details>
+<summary>⚙️ Rear Drive Housing (Final Drive Box)</summary>
+<div class="result"><span>Drive housing bolts</span><span>10 Nm (7.2 ft·lb)</span></div>
+<div class="result"><span>Output shaft nut</span><span>34 Nm (25 ft·lb)</span></div>
+</details>
+<details>
+<summary>⚙️ Pinion Shaft / Bevel Gear</summary>
+<div class="result"><span>Bevel gear cover bolts</span><span>10 Nm (7.2 ft·lb)</span></div>
+</details>
+</div>
+<div class="tip">
     💡 TIP: Always use a calibrated torque wrench. Recheck torque values after heat cycles during break-in.
   </div>
-
-  <div class="tip" style="margin-top: 2rem;">
+<div class="tip" style="margin-top: 2rem;">
     📏 <strong>General Torque Guidelines by Bolt Size (Yamaha Rule of Thumb)</strong>
-    <table style="width:100%; margin-top: 1rem; border-collapse: collapse; font-size: 0.9rem;">
-      <thead>
-        <tr style="border-bottom: 1px solid #444;">
-          <th style="text-align: left; padding: 0.5rem;">Bolt Size</th>
-          <th style="text-align: left; padding: 0.5rem;">Standard Torque (Nm)</th>
-          <th style="text-align: left; padding: 0.5rem;">Notes</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr><td style="padding: 0.5rem;">M4</td><td style="padding: 0.5rem;">2–3 Nm</td><td style="padding: 0.5rem;">Very small — used in electronics and covers</td></tr>
-        <tr><td style="padding: 0.5rem;">M5</td><td style="padding: 0.5rem;">4–6 Nm</td><td style="padding: 0.5rem;">Often used for small brackets</td></tr>
-        <tr><td style="padding: 0.5rem;">M6</td><td style="padding: 0.5rem;">7–10 Nm</td><td style="padding: 0.5rem;">Case screws, small clamps</td></tr>
-        <tr><td style="padding: 0.5rem;">M8</td><td style="padding: 0.5rem;">17–25 Nm</td><td style="padding: 0.5rem;">Most engine mounts, shock bolts</td></tr>
-        <tr><td style="padding: 0.5rem;">M10</td><td style="padding: 0.5rem;">30–45 Nm</td><td style="padding: 0.5rem;">Axles, swingarms, cylinder heads</td></tr>
-        <tr><td style="padding: 0.5rem;">M12</td><td style="padding: 0.5rem;">50–70 Nm</td><td style="padding: 0.5rem;">Rear axles, crank bolts</td></tr>
-        <tr><td style="padding: 0.5rem;">M14</td><td style="padding: 0.5rem;">80–110 Nm</td><td style="padding: 0.5rem;">Flywheel nuts, large suspension hardware</td></tr>
-      </tbody>
-    </table>
-  </div>
-
-  <div class="actions">
-    <button onclick="window.print()">🖨️ Print</button>
-    <button onclick="alert('Save to device function placeholder')">💾 Save to Device</button>
-  </div>
+<table style="width:100%; margin-top: 1rem; border-collapse: collapse; font-size: 0.9rem;">
+<thead>
+<tr style="border-bottom: 1px solid #444;">
+<th style="text-align: left; padding: 0.5rem;">Bolt Size</th>
+<th style="text-align: left; padding: 0.5rem;">Standard Torque (Nm)</th>
+<th style="text-align: left; padding: 0.5rem;">Notes</th>
+</tr>
+</thead>
+<tbody>
+<tr><td style="padding: 0.5rem;">M4</td><td style="padding: 0.5rem;">2–3 Nm</td><td style="padding: 0.5rem;">Very small — used in electronics and covers</td></tr>
+<tr><td style="padding: 0.5rem;">M5</td><td style="padding: 0.5rem;">4–6 Nm</td><td style="padding: 0.5rem;">Often used for small brackets</td></tr>
+<tr><td style="padding: 0.5rem;">M6</td><td style="padding: 0.5rem;">7–10 Nm</td><td style="padding: 0.5rem;">Case screws, small clamps</td></tr>
+<tr><td style="padding: 0.5rem;">M8</td><td style="padding: 0.5rem;">17–25 Nm</td><td style="padding: 0.5rem;">Most engine mounts, shock bolts</td></tr>
+<tr><td style="padding: 0.5rem;">M10</td><td style="padding: 0.5rem;">30–45 Nm</td><td style="padding: 0.5rem;">Axles, swingarms, cylinder heads</td></tr>
+<tr><td style="padding: 0.5rem;">M12</td><td style="padding: 0.5rem;">50–70 Nm</td><td style="padding: 0.5rem;">Rear axles, crank bolts</td></tr>
+<tr><td style="padding: 0.5rem;">M14</td><td style="padding: 0.5rem;">80–110 Nm</td><td style="padding: 0.5rem;">Flywheel nuts, large suspension hardware</td></tr>
+</tbody>
+</table>
 </div>
-
-
-
+<div class="actions">
+<button onclick="window.print()">🖨️ Print</button>
+<button onclick="alert('Save to device function placeholder')">💾 Save to Device</button>
+</div>
+</div>
 <script>
   function searchSpecs() {
     const input = document.getElementById("search").value.toLowerCase();
@@ -228,7 +222,6 @@ header h1 a { text-decoration: none; color: inherit; }
     }
   }
 </script>
-
 <div id="footer-container"></div>
 <script>
   fetch('footer.html')
